--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+</div><html>
 <title>Test project</title>
 <head></head>
-<body style="background-color: black;">
+ <style>
+      .img-container {
+        text-align: center;
+      }
+   
+<body style="background-color: black;">\
+   <br>
+<div class="img-container"><img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"</div>
 
 
 </body>
