--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
 <body style="background-color: black;">\
    <br>
-<div class="img-container"><img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"</div>
+<div class="img-container"><img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"/></div>
 
 
 </body>
