--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
    
 <body style="background-color: black;">\
    <br>
-<div class="img-container"><img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"/></div>
+<div class="img-container">
+ <a href="https://github.com/d8rkmind">
+ <img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"/>
+ </a>
+  </div>
 
 
 </body>
