--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <title>Test project</title>
 <head></head>
  <style>
-      .img-container {
+      .lefter {
         text-align: left;
       }
  </style>
    
 <body style="background-color: black;">\
    <br>
-<div class="img-container">
+<div class="lefter">
  <a href="https://github.com/d8rkmind">
- <img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg"/>
+ <img src="https://raw.githubusercontent.com/d8rkmind/hello-there/master/photo_2021-08-21_11-24-04.jpg" height=197 width=481/>
  </a>
   </div>
 
