--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       .lefter {
         text-align: left;
       }
+      .righter {
+         text-align: right;
+      }
+      .centere {
+         text-align: center;
+      }
+
  </style>
    
 <body style="background-color: black;">\
